# r-index

./: CMakeLists.txt
benchmark/: bm_locate.cpp
internal/: huff_string.hpp  r_index.hpp  rle_string.hpp  sparse_sd_vector.hpp
